force-app/main/default/objects/Business_Assessment__c/fields/NBAC_Committee_Level__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Committee_Level__c</fullName>
    <description>The higher level breakdown of the NBAC committee areas which is used in the directing of the approval of NBAC Applications to the applicable committee.</description>
    <inlineHelpText>The higher level breakdown of the NBAC committee areas which is used in the directing of the approval of NBAC Applications to the applicable committee.</inlineHelpText>
    <label>NBAC Committee Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>