force-app/main/default/objects/Business_Assessment__c/fields/NBAC_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Meeting_Date__c</fullName>
    <description>The actual date the NBAC form is expected to be presented to the committee</description>
    <inlineHelpText>Date of which the NBAC application will be presented to the Committee</inlineHelpText>
    <label>NBAC Meeting Date</label>
    <type>Date</type>
</CustomField>