force-app/main/default/objects/Business_Assessment__c/fields/NBAC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Start_Date__c</fullName>
    <description>The actual date the NBAC process has started</description>
    <inlineHelpText>Date which the NBAC application and the completion thereof is started</inlineHelpText>
    <label>NBAC Start Date</label>
    <type>Date</type>
</CustomField>