force-app/main/default/objects/Business_Assessment__c/fields/Off_Taker__c.field-meta.xml
<CustomField>
    <fullName>Off_Taker__c</fullName>
    <description>US-3690</description>
    <inlineHelpText>Buyer of the project</inlineHelpText>
    <label>Off Taker</label>
    <length>32</length>
    <type>Text</type>
</CustomField>