force-app/main/default/objects/Business_Assessment__c/fields/Operation_LGD__c.field-meta.xml
<CustomField>
    <fullName>Operation_LGD__c</fullName>
    <description>US-3690</description>
    <inlineHelpText>Last given default during operations phase</inlineHelpText>
    <label>Operation LGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>