force-app/main/default/objects/Business_Assessment__c/fields/Opportunities_out_of_budget__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_out_of_budget__c</fullName>
    <description>Number of the opportunities that are not part of the client budget.</description>
    <inlineHelpText>Number of the opportunities that are not part of the client budget.</inlineHelpText>
    <label>Opportunities out of budget</label>
    <summaryFilterItems>
        <field>Assessment_Opportunity__c.Is_Opportunity_part_of_Client_Budget__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment_Opportunity__c.Business_Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>