force-app/main/default/objects/Business_Assessment__c/fields/Other_Lenders__c.field-meta.xml
<CustomField>
    <fullName>Other_Lenders__c</fullName>
    <description>Other Lenders expected to be included in the Lender Group, e.g.: RMB, Barclays, Standard Chartered.</description>
    <inlineHelpText>Other Lenders expected to be included in the Lender Group, e.g.: RMB, Barclays, Standard Chartered.</inlineHelpText>
    <label>Other Lenders</label>
    <type>TextArea</type>
</CustomField>