force-app/main/default/objects/Business_Assessment__c/fields/Political_Risk_Cover__c.field-meta.xml
<CustomField>
    <fullName>Political_Risk_Cover__c</fullName>
    <description>US-3690</description>
    <inlineHelpText>Percentage that the Export Credit Agency will provide for political risk cover</inlineHelpText>
    <label>Political Risk Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>