force-app/main/default/objects/Business_Assessment__c/fields/Potential_Investors__c.field-meta.xml
<CustomField>
    <fullName>Potential_Investors__c</fullName>
    <description>The likely investors whom Distribution believe would have appetite for this transaction</description>
    <inlineHelpText>The likely investors whom Distribution believe would have appetite for this transaction</inlineHelpText>
    <label>Potential Investors</label>
    <type>TextArea</type>
</CustomField>