force-app/main/default/objects/Business_Assessment__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Sourced from the final report after the CRA and TRA has been completed in the E&amp;S screening tool, and after clicking &apos;generate final report&apos;</description>
    <inlineHelpText>Sourced from the final report after the CRA and TRA has been completed in the E&amp;S screening tool, and after clicking &apos;generate final report&apos;</inlineHelpText>
    <label>Reference Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>