force-app/main/default/objects/Business_Assessment__c/fields/Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Classification__c</fullName>
    <description>Indicates the level of complexity of the deal/transaction</description>
    <inlineHelpText>Indicates the level of complexity of the deal/transaction.
            Standardised, i.e.: Vanilla product commonly issued and understood.
            Structured, i.e.: Complex product with customised/bespoke issues.</inlineHelpText>
    <label>Risk Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standardised</fullName>
            </value>
            <value>
                <fullName>Structured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>