force-app/main/default/objects/Business_Assessment__c/fields/Risk_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Risk_Commentary__c</fullName>
    <description>Risk to complete: any detail necessary to provide a context on the risk of the transaction(s)</description>
    <inlineHelpText>Risk to complete: any detail necessary to provide a context on the risk of the transaction(s)</inlineHelpText>
    <label>Risk Commentary</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>