force-app/main/default/objects/Business_Assessment__c/fields/Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Sanctions__c</fullName>
    <description>Does the client or any of its shareholders conduct business in sanctioned countries or with sanctioned individuals? If relevant, a sanctions questionnaire  is to be completed and logged with the Group Sanctions Desk.</description>
    <inlineHelpText>Does the client or any of its shareholders conduct business in sanctioned countries or with sanctioned individuals? If relevant, a sanctions questionnaire  is to be completed and logged with the Group Sanctions Desk.</inlineHelpText>
    <label>Sanctions</label>
    <length>60</length>
    <type>Text</type>
</CustomField>