force-app/main/default/objects/Business_Assessment__c/fields/SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>SB_Gross_Participation__c</fullName>
    <description>[SFP-6318] - The total amount of the underwrite provided by Standard Bank. Underwrite implies providing more than the bank intends to hold.</description>
    <inlineHelpText>The total amount of the underwrite provided by Standard Bank. Underwrite implies providing more than the bank intends to hold. If the transaction is not an underwrite, but merely a participation or bilateral, then do not fill any amount in this field.</inlineHelpText>
    <label>SB Gross Participation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>