force-app/main/default/objects/Business_Assessment__c/fields/SB_Hold__c.field-meta.xml
<CustomField>
    <fullName>SB_Hold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[SFP-6318] - The amount to be held by the bank, typically agreed with Risk ahead of submission of the NBAC paper.</description>
    <inlineHelpText>The amount to be held by the bank, typically agreed with Risk ahead of submission of the NBAC paper.</inlineHelpText>
    <label>SB Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>