force-app/main/default/objects/Business_Assessment__c/fields/SB_Sell_Down__c.field-meta.xml
<CustomField>
    <fullName>SB_Sell_Down__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[SFP-6318] - The difference between the underwrite amount and the Risk agreed hold amount is the amount Credit Risk require to be distributed.</description>
    <inlineHelpText>The difference between the underwrite amount and the Risk agreed hold amount is the amount Credit Risk require to be distributed.</inlineHelpText>
    <label>SB Sell Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>