force-app/main/default/objects/Business_Assessment__c/fields/SBSA_Role__c.field-meta.xml
<CustomField>
    <fullName>SBSA_Role__c</fullName>
    <description>The role the bank plays in the transaction.  Typically one of the following: Underwriter, Arranger, Participant, Sole Lender</description>
    <inlineHelpText>The role the bank plays in the transaction.</inlineHelpText>
    <label>SBSA Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underwriter</fullName>
            </value>
            <value>
                <fullName>Arranger</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Sole Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>