force-app/main/default/objects/Business_Assessment__c/fields/Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Sponsors__c</fullName>
    <description>US-3690 Key directors of the Group Parent (i.e.: Chairman, CEO, CFO, Treasurer)</description>
    <inlineHelpText>Indicates the level of complexity of the deal/transaction. Standardised, i.e.: Vanilla product commonly issued and understood.Structured, i.e.: Complex product with customised/bespoke issues.</inlineHelpText>
    <label>Sponsors</label>
    <type>TextArea</type>
</CustomField>