force-app/main/default/objects/Business_Assessment__c/fields/Strategic_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Rationale__c</fullName>
    <description>Brief strategic rationale for the transaction including details of how this delivers into the overall client service plan.

            For Type 2 and 4 transactions only, the 1-page Annexure may be used to provide additional information on the client strategy.  Additional information or submissions exceeding the 1 page will not be accepted.</description>
    <inlineHelpText>The strategic motives for transacting this deal. Which sectors or countries does the deal target? If the deal is opportunistic, why should CIB be doing the deal? Comment on the relationship strength with the client  - is this a key client to CIB?</inlineHelpText>
    <label>Strategic Rationale</label>
    <length>1700</length>
    <type>LongTextArea</type>
</CustomField>