force-app/main/default/objects/Business_Assessment__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <description>The decision category to which the business assessment applies.
            Type 1: Low transaction risk and complexity with adequate client or transaction returns;
            Type 2: Low transaction risk and complexity but inadequate client or transaction returns;
            Type 3: High transaction risk and complexity but adequate client or transaction returns;
            Type 4: High transaction risk and complexity and inadequate client or transaction returns.</description>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1: For noting purposes</fullName>
            </value>
            <value>
                <fullName>Type 2: Emphasis on client strategy / returns</fullName>
            </value>
            <value>
                <fullName>Type 3: Emphasis on risk / complexity</fullName>
            </value>
            <value>
                <fullName>Type 4: Full discussion</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Type 1</fullName>
                <isActive>false</isActive>
                <label>Type 1</label>
            </value>
            <value>
                <fullName>Type 2</fullName>
                <isActive>false</isActive>
                <label>Type 2</label>
            </value>
            <value>
                <fullName>Type 3</fullName>
                <isActive>false</isActive>
                <label>Type 3</label>
            </value>
            <value>
                <fullName>Type 4</fullName>
                <isActive>false</isActive>
                <label>Type 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>