force-app/main/default/objects/Business_Assessment__c/fields/TCM_Commentary__c.field-meta.xml
<CustomField>
    <fullName>TCM_Commentary__c</fullName>
    <description>Additional commentary on the deal, which covers ancillary income returns and any specifics that cannot be detailed above as well as recommendations from TCM and an indication of support</description>
    <inlineHelpText>Additional commentary on the deal, which covers ancillary income returns and any specifics that cannot be detailed above as well as recommendations from TCM and an indication of support
            Max Characters: 256</inlineHelpText>
    <label>TCM Commentary</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>