force-app/main/default/objects/Business_Assessment__c/fields/TCM_Details__c.field-meta.xml
<CustomField>
    <fullName>TCM_Details__c</fullName>
    <description>Include the TCM breakdown of Funding Limits, Client Group Economics, Transaction Economics, Concentration Analysis and Ancillary Requirements.</description>
    <inlineHelpText>Include the TCM breakdown of Funding Limits, Client Group Economics, Transaction Economics, Concentration Analysis and Ancillary Requirements. Insert all details here.
            Max Characters: 2400</inlineHelpText>
    <label>TCM Details</label>
    <length>2400</length>
    <type>Html</type>
</CustomField>