force-app/main/default/objects/Business_Assessment__c/fields/Total_SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>Total_SB_Gross_Participation__c</fullName>
    <description>The total amount that SB will be providing the client for the opportunities selected for the business assessment SGPRT-1229</description>
    <formula>Total_SB_Gross_Participation_of_Opps__c + Economic_Group_Parent_Credit_Limits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount that SB will be providing the Client for the Opportunities selected for the Business Assessment</inlineHelpText>
    <label>Total SB Gross Participation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>