force-app/main/default/objects/Business_Assessment__c/fields/Total_SB_Gross_Participation_of_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_SB_Gross_Participation_of_Opps__c</fullName>
    <description>The total amount that SB will be providing the client for the opportunities selected for the business assessment. SGPRT-1229</description>
    <inlineHelpText>The total amount that SB will be providing the Client for the Opportunities selected for the Business Assessment</inlineHelpText>
    <label>Total SB Gross Participation of Opps</label>
    <summarizedField>Assessment_Opportunity__c.Total_SB_Gross_Participation__c</summarizedField>
    <summaryForeignKey>Assessment_Opportunity__c.Business_Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>