force-app/main/default/objects/Business_Assessment__c/fields/TPS_PY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>TPS_PY_Revenue__c</fullName>
    <description>Revenue generated for the Bank from the Client Group over the last financial year for Transactional Products and Services</description>
    <inlineHelpText>Revenue generated for the Bank from the Client Group over the last financial year for Transactional Products and Services</inlineHelpText>
    <label>TPS PY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>