force-app/main/default/objects/Business_Assessment__c/fields/TPS_Share_of_Wallet_Existing_SBG__c.field-meta.xml
<CustomField>
    <fullName>TPS_Share_of_Wallet_Existing_SBG__c</fullName>
    <description>Estimated percentage share of the Client&apos;s spend Standard Bank has within Transactional Products and Services</description>
    <inlineHelpText>Estimated percentage share of the Client&apos;s spend Standard Bank has within Transactional Products and Services</inlineHelpText>
    <label>TPS Share of Wallet (Existing) SBG %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>