force-app/main/default/objects/Business_Assessment__c/fields/TPS_Share_of_Wallet_Existing_Total__c.field-meta.xml
<CustomField>
    <fullName>TPS_Share_of_Wallet_Existing_Total__c</fullName>
    <description>Estimated share of the Client&apos;s spend Standard Bank has within  Transactional Products and Services</description>
    <inlineHelpText>Estimated share of the Client&apos;s spend Standard Bank has within Transactional Products and Services</inlineHelpText>
    <label>TPS Share of Wallet (Existing) Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>