force-app/main/default/objects/Business_Assessment__c/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <description>Brief description of the transaction being contemplated.  Remember this is not a credit committee meeting.

            For Type 3 and 4 transactions only, the 1-page Annexure may be used to provide additional information associated with the risk and complexity of the transaction.  Additional information or submissions exceeding the 1 page will not be accepted.</description>
    <inlineHelpText>Transaction Overview. Concise overview of the business/sector the Client is involved in. No more than 4 lines to be provided.</inlineHelpText>
    <label>Transaction Description</label>
    <length>1700</length>
    <type>LongTextArea</type>
</CustomField>