force-app/main/default/objects/Business_Assessment__c/fields/Transaction_Profile__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Profile__c</fullName>
    <description>Is the transaction a syndicated loan, a club or a bilateral loan.</description>
    <inlineHelpText>Is the transaction a syndicated loan, a club or a bilateral loan.</inlineHelpText>
    <label>Transaction Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Syndicated Loan</fullName>
            </value>
            <value>
                <fullName>Club Loan</fullName>
            </value>
            <value>
                <fullName>Bilateral Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>