force-app/main/default/objects/Business_Assessment__c/fields/Transaction_Risk__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Risk__c</fullName>
    <description>Measurement rating of the risk associated with a particular transaction, based on the potential E&amp;S risks identified. Sourced from completion of the TRA (transaction risk assessment) in the E&amp;S screening tool.</description>
    <inlineHelpText>Measurement rating of the risk associated with a particular transaction, based on the potential E&amp;S risks identified. Sourced from completion of the TRA (transaction risk assessment) in the E&amp;S screening tool.</inlineHelpText>
    <label>Transaction Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>