force-app/main/default/objects/Business_Assessment__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>[SFP-6318] - Is the transaction a syndicated loan, a club or a bilateral loan.</description>
    <inlineHelpText>Is the transaction a syndicated loan, a club or a bilateral loan.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Transaction_Type</valueSetName>
    </valueSet>
</CustomField>