force-app/main/default/objects/Business_Assessment__c/fields/Ultimate_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Shareholders__c</fullName>
    <description>The shareholders of the Group Parent.</description>
    <inlineHelpText>Shareholders of the Group Parent. List the three largest shareholders.</inlineHelpText>
    <label>Ultimate Shareholders</label>
    <type>TextArea</type>
</CustomField>