force-app/main/default/objects/Business_Assessment__c/fields/Underwrite_Amount__c.field-meta.xml
<CustomField>
    <fullName>Underwrite_Amount__c</fullName>
    <description>The total amount of the underwrite provided by Standard Bank. Underwrite implies providing more than the bank intends to hold.</description>
    <inlineHelpText>The total amount of the underwrite provided by Standard Bank. Underwrite implies providing more than the bank intends to hold.  If the transaction is not an underwrite, but merely a participation or bilateral, then do not fill any amount in this field.</inlineHelpText>
    <label>Underwrite Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>