force-app/main/default/objects/Business_Assessment__c/fields/Updated_to_Finalisation__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Finalisation__c</fullName>
    <label>Updated to Finalisation</label>
    <type>DateTime</type>
</CustomField>