force-app/main/default/objects/Business_Assessment__c/fields/Updated_to_Stakeholder_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Stakeholder_Contribution__c</fullName>
    <label>Updated to Stakeholder Contribution</label>
    <type>DateTime</type>
</CustomField>