force-app/main/default/objects/Business_Assessment__c/fields/Updated_to_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Submitted__c</fullName>
    <label>Updated to Submitted</label>
    <type>DateTime</type>
</CustomField>