force-app/main/default/objects/Business_Assessment__c/fields/Updated_to_Supported__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Supported__c</fullName>
    <label>Updated to Supported</label>
    <type>DateTime</type>
</CustomField>