force-app/main/default/objects/Business_Assessment__c/fields/Updated_to_Transaction_Overview__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Transaction_Overview__c</fullName>
    <label>Updated to Transaction Overview</label>
    <type>DateTime</type>
</CustomField>