force-app/main/default/objects/Business_Assessment__c/fields/YTD_Group_Parent_Client_CROC__c.field-meta.xml
<CustomField>
    <fullName>YTD_Group_Parent_Client_CROC__c</fullName>
    <description>Annualised Group Parent Client Revenue / Average Tier 1 Regulatory Capital Held. This information is received in a feed from CRT.Once a month a file will be uploaded with YTD CROC data. The information will be extracted from Client Capital and Revenue. (US-1295)</description>
    <inlineHelpText>Annualised Group Parent Client Revenue / Average Tier1 Regulatory Capital Held. This information is received in a feed from CRT. Once a month a file will be uploaded with YTD CROC data. The information will be extracted from the Client Capital and Revenue</inlineHelpText>
    <label>Current YTD Group Parent Client CROC (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>