force-app/main/default/objects/Business_Assessment__c/fields/YTD_Group_Parent_Client_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Group_Parent_Client_Revenue__c</fullName>
    <formula>IF(NOT(ISBLANK( Account__r.Group_Parent__c )),Account__r.Group_Parent__r.Actual_CY_Revenue__c, Account__r.Actual_CY_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current YTD Group Parent Client Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>