force-app/main/default/objects/Business_Assessment__c/fields/YTD_Group_Parent_Client_ROE__c.field-meta.xml
<CustomField>
    <fullName>YTD_Group_Parent_Client_ROE__c</fullName>
    <formula>YTD_Group_Parent_Client_CROC__c * VALUE($Label.NBAC_Group_Current_YTD_CROC_to_ROE_ratio) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Group Current Year Return on Equity. Calculated using Group Parent Client CROC (%).</inlineHelpText>
    <label>Current YTD Group Parent Client ROE (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>