force-app/main/default/objects/Business_Assessment__c/recordTypes/Business_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Business_Assessment</fullName>
    <active>true</active>
    <description>default RT for object</description>
    <label>Business Assessment</label>
</RecordType>