force-app/main/default/objects/Business_Assessment__c/recordTypes/Business_Assessment_CommB.recordType-meta.xml
<RecordType>
    <fullName>Business_Assessment_CommB</fullName>
    <active>true</active>
    <description>We want to seperate submission type pick list values between CIB and CommB, so i created a recordType for CommB  for defaulting a recordtype when a CommB user create BA . besically we do not want CIB users to see submission type values that belong to ComB</description>
    <label>Business Assessment CommB</label>
</RecordType>