force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC.recordType-meta.xml
<RecordType>
    <fullName>NBAC</fullName>
    <active>true</active>
    <description>US-2450</description>
    <label>NBAC</label>
</RecordType>