force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC_CommB.recordType-meta.xml
<RecordType>
    <fullName>NBAC_CommB</fullName>
    <active>true</active>
    <description>This gives access to Commercial Banking Business Assessment process US-3635</description>
    <label>NBAC CommB</label>
</RecordType>