force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC_CommB_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>NBAC_CommB_Read_Only</fullName>
    <active>true</active>
    <label>NBAC CommB Read Only</label>
</RecordType>