force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC_Joint_Venture.recordType-meta.xml
<RecordType>
    <fullName>NBAC_Joint_Venture</fullName>
    <active>true</active>
    <description>US-3314 / US-3690</description>
    <label>NBAC Joint Venture</label>
</RecordType>