force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC_Joint_Venture_READONLY.recordType-meta.xml
<RecordType>
    <fullName>NBAC_Joint_Venture_READONLY</fullName>
    <active>true</active>
    <description>US-3690</description>
    <label>NBAC Joint Venture READONLY</label>
</RecordType>