force-app/main/default/objects/Business_Assessment__c/recordTypes/NBAC_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>NBAC_Read_Only</fullName>
    <active>true</active>
    <description>US-2442</description>
    <label>NBAC Read Only</label>
</RecordType>